@@ -172,7 +172,7 @@ and other updates, or send the 2-word E-mail message
 	subscribe ampl
 
 to netlib@netlib.bell-labs.com to receive notification of updates.
-Please send bug reports and other comments to dmg@bell-labs.com
+Please send bug reports and other comments to dmg@ampl.com
 (David M. Gay).
 
 
